--- a/build
+++ b/build
@@ -1,4 +1,5 @@
 #!/bin/bash
 
 docker build \
- -t gemail/docker-proreports -t gemail/docker-proreports:3.1.29h.r56 .
+ -t gemail/docker-proreports  .
+docker tag  gemail/docker-proreports:3.1.29h.r56 email/docker-proreports:latest
