--- a/build
+++ b/build
@@ -1,5 +1,5 @@
 #!/bin/bash
 
 docker build \
- -t gemail/docker-proreports  .
+ -t gemail/docker-proreports:3.1.29h.r56  .
 docker tag  gemail/docker-proreports:3.1.29h.r56 gemail/docker-proreports:latest
