--- a/build
+++ b/build
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+VERSION="3.1.29h.r56"
+
 docker build \
- -t gemail/docker-proreports:3.1.29h.r56  .
-docker tag  gemail/docker-proreports:3.1.29h.r56 gemail/docker-proreports:latest
+ -t gemail/docker-proreports:${VERSION}  .
+docker tag  gemail/docker-proreports:${VERSION} gemail/docker-proreports:latest
