--- a/build
+++ b/build
@@ -2,6 +2,5 @@
 
 VERSION="3.1.29h.r56"
 
-docker build \
- -t gemail/docker-proreports:${VERSION}  .
+docker build -t gemail/docker-proreports:${VERSION}  .
 docker tag  gemail/docker-proreports:${VERSION} gemail/docker-proreports:latest
