--- a/build
+++ b/build
@@ -1,6 +1,4 @@
 #!/bin/bash
 
-VERSION="3.1.29h.r56"
 
-docker build -t gemail/docker-proreports:${VERSION}  .
-docker tag  gemail/docker-proreports:${VERSION} gemail/docker-proreports:latest
+docker build -t gemail/docker-proreports:latest  .
