--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build -t gemail/docker-proreports:latest -t gemail/docker-proreports:3.1.29h.r56 .
+docker build -t gemail/docker-proreports:latest  .
